--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
@@ -25,18 +26,22 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
     "@tabler/icons-react": "^3.29.0",
+    "@types/next": "^9.0.0",
     "@types/recharts": "^1.8.29",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.471.1",
     "mongoose": "^8.9.5",
     "motion": "^12.0.6",
+    "next": "^15.1.6",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-intersection-observer": "^9.15.1",
