--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tabler/icons-react": "^3.29.0",
     "@types/next": "^9.0.0",
     "@types/recharts": "^1.8.29",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -36,16 +37,18 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "framer-motion": "^12.0.6",
+    "install": "^0.13.0",
     "lucide-react": "^0.471.1",
     "mongoose": "^8.9.5",
     "motion": "^12.0.6",
     "next": "^15.1.6",
+    "npm": "^11.1.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-intersection-observer": "^9.15.1",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.1.5",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
